--- a/snap/snap.html
+++ b/snap/snap.html
@@ -37,8 +37,8 @@
         <script src="src/sha512.js?version=2019-06-27"></script>
         <script src="src/FileSaver.min.js?version=2019-06-27"></script>
         <!--    following changed by Ken Kahn -->
-        <script src="/ai/js/onload.js"></script>
-        <script src="/ai/ecraft2learn.js"></script>
+        <script src="/js/onload.js"></script>
+        <script src="/ecraft2learn.js"></script>
     </head>
     <body style="margin: 0;">
         <canvas id="world" tabindex="1" style="position: absolute;"></canvas>
